--- a/01-calculator/calculator.html
+++ b/01-calculator/calculator.html
@@ -10,7 +10,8 @@
         }
         #main {
             margin: 0 auto;
-            width: 400px;
+            width:500px;
+            
         }
         table {
             margin: 100px;
@@ -68,7 +69,10 @@
 </head>
 <body>
 <div id="main">
+    <h1>اولین منی پروژه ماشین حساب با جاوا اسکریپ</h1>
     <table border="0" width="200" cellspacing="0">
+
+       
         <tr>
             <td colspan="5" style="text-align: center">
                 <input id="nama" type="text" readonly value="">
